# macro_record

./: .gitignore  LICENSE  README.md  appveyor-after-build-script.cmd  appveyor-before-build-script.cmd  appveyor.yml  inno-setup-script.iss  macro_record.sln  macro_record.sln.DotSettings
Common/: StatusEnum.cs
InjectAndCaptureDll/: CaptureInput.cpp  CaptureInput.h  Event.h  InjectAndCaptureCAdaptor.cpp  InjectAndCaptureDll.cpp  InjectAndCaptureDll.h  InjectAndCaptureDll.vcxproj  InjectAndCaptureDll.vcxproj.filters  InjectInput.cpp  InjectInput.h  KeyboardEvent.cpp  KeyboardEvent.h  MouseEvent.cpp  MouseEvent.h  ReadMe.txt  WindowForCaptureEvents.cpp  WindowForCaptureEvents.h  cpp.hint  dllmain.cpp  stdafx.h
InjectAndCaptureDllTest/: InjectAndCaptureDllTest.vcxproj  test.cpp
MacroRecorderGUI/: App.xaml  App.xaml.cs  CaptureEventWindow.xaml  CaptureEventWindow.xaml.cs  Events.cs  FileOperations.cs  GlobalHotkeys.cs  Macro.cs  (+7 more)
RecordPlaybackDLL/: CMakeLists.txt  InjectAndCaptureCAdaptor.cpp  InjectAndCaptureDll.h  RecordPlaybackCAdaptor.cpp  RecordPlaybackDLL.cpp  RecordPlaybackDLL.filters  RecordPlaybackDLL.h  RecordPlaybackDLL.vcxproj  cpp.hint  stdafx.cpp
RecordPlaybackDLL/Capture/: CaptureEngine.cpp  CaptureEngine.h
RecordPlaybackDLL/Common/: DeserializeEvent.cpp  DeserializeEvent.h  Event.cpp  Event.h  KeyboardEvent.cpp  KeyboardEvent.h  MouseEvent.cpp  MouseEvent.h
RecordPlaybackDLL/Inject/: InjectInput.cpp  InjectInput.h
RecordPlaybackDLL/Playback/: PlaybackInput.cpp  PlaybackInput.h
RecordPlaybackDLL/Record/: RecordEngine.cpp  RecordEngine.h
(+80 files in other folders)
